--- a/ajax3.html
+++ b/ajax3.html
@@ -5,6 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>ajax3 external api</title>
+  <style>
+  .user{
+    display: flex;
+    background: #f4f4f4;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+
+  .user ul{
+    list-style: none;
+  }
+  </style>
 </head>
 <body>
 
@@ -24,9 +36,29 @@
     var xhr = new XMLHttpRequest();
     xhr.open('GET', 'https://api.github.com/users', true);
 
-    xht.onload = function(){
-      
+    xhr.onload = function(){
+      if(this.status == 200){
+        var users = JSON.parse(this.responseText);
+        //console.log(users);
+
+
+        var output = '';
+        for(var i in users){
+          output +=
+          '<div class = "user">' +
+          '<img src="'+users[i].avatar_url+'"width="70" height="70">'+
+          '<ul>'+
+          '<li>ID: ' + users[i].id+'</li>'+
+          '<li>Login: ' + users[i].login+'</li>'+
+          '</ul>' +
+          '</div>';
+
+        }
+        document.getElementById('users').innerHTML = output;
+      }
+
     }
+    xhr.send();
   }
 </script>
 
