--- a/index2.html
+++ b/index2.html
@@ -20,20 +20,29 @@
 
 
 <h1> AJAX Get form</h1>
+<form id="getForm">
+
+  <input type="text"name="name" id="name1">
+  <input type="submit"value="submit">
+</form>
+
+<h1> POST form</h1>
 <form method="GET" action="process.php">
 
   <input type="text"name="name">
   <input type="submit"value="submit">
 </form>
 
-
-
+<!-- 56:29 -->
   <script charset="utf-8">
     document.getElementById('button').addEventListener('click', getName);
+    document.getElementById('getForm').addEventListener('submit', getName);
+    function getName(e){
+      e.preventDefault;
 
-    function getName(){
+      var name = document.getElementById('name1').value;
       var xhr = new XMLHttpRequest();
-      xhr.open('GET', 'process.php?name=Brad', true);
+      xhr.open('GET', 'process.php?name='+name, true);
 
       xhr.onload = function(){
         console.log(this.responseText);
